# doc-vqa

./: .dockerignore  DocVQA-inference.ipynb  Dockerfile  README.md  pyproject.toml  runner.py
