[tool.poetry]
name = "haystac-donut-demo"
version = "0.1.0"
description = ""
authors = ["Vadim <artifex.i@gmail.com>"]
readme = "README.md"
# packages = [{include = "haystac_donut_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
torchvision = "^0.13.1"
transformers = "^4.22.0"
sentencepiece = "^0.1.97"
protobuf = "3.20.1"
PyMuPDF = "^1.20.2"
streamlit = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
datasets = "^2.4.0"
jupyterlab = "^3.4.7"
ipywidgets = "^8.0.2"
